--- a/executables/simpleshutdown/readme
+++ b/executables/simpleshutdown/readme
@@ -1,2 +1,2 @@
-These programs are simple shut down scripts, designed to force a shutdown a delay of 2-5 minutes after the s key is pressed. All files run
-in background
+These programs are simple shut down scripts, designed to force a shutdown a delay of 2-5 minutes after the s key is pressed.
+All files run in background
